--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -4,6 +4,7 @@
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
+  "hideLogs": false,
   "plugins": {
     "SplashScreen": {
       "launchShowDuration": 0
