--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "cosmoiler",
   "private": true,
-  "version": "4.0.0",
+  "version": "4.0",
   "description": "Cosmoiler - automatic chain oiler",
   "repository": "",
-  "license": "UNLICENSED",
+  "license": "FREE",
   "scripts": {
     "start": "npm run dev",
     "dev": "cross-env NODE_ENV=development webpack serve --config ./build/webpack.config.js",
