--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@capacitor/cli": "^2.4.6",
     "babel-loader": "^8.2.2",
     "chalk": "^4.1.0",
+    "compression-webpack-plugin": "^8.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "cordova-res": "^0.15.3",
     "cpy-cli": "^3.1.1",
@@ -64,6 +65,7 @@
     "terser-webpack-plugin": "^5.1.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.19.0",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
   }
