--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Cosmoiler - automatic chain oiler",
   "repository": "",
   "license": "FREE",
+  "homepage": "./",
   "scripts": {
     "start": "npm run dev",
     "dev": "cross-env NODE_ENV=development webpack serve --config ./build/webpack.config.js",
