--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "cosmoiler",
   "private": true,
-  "version": "4.0.0",
+  "version": "4.2.0",
   "description": "Cosmoiler - automatic chain oiler",
   "repository": "",
   "license": "FREE",
   "homepage": "./",
+  "author": "Sergey Borisov <cosmoiler@gmail.com> (https://cosmoiler.com)",
   "scripts": {
     "start": "npm run dev",
     "dev": "cross-env NODE_ENV=development webpack serve --config ./build/webpack.config.js",
-    "build": "cross-env NODE_ENV=production node ./build/build.js",
+    "build": "cross-env NODE_ENV=production node ./build/build.js && npm run postinstall",
     "build-capacitor-ios": "cross-env NODE_ENV=production node ./build/build.js && npx cap copy ios",
     "build-capacitor-android": "cross-env NODE_ENV=production node ./build/build.js && npx cap copy android",
-    "postinstall": "cpy ./node_modules/framework7-icons/fonts/*.* ./src/fonts/"
+    "postinstall": "cpx ./www/*.{html,gz,woff,png} ./%USERPROFILE%/Documents/PlatformIO/Projects/Cosmoiler/Firmware/ESP32/Main/data/"
   },
   "browserslist": [
     "Android >= 7",
@@ -26,6 +27,7 @@
     "@capacitor/android": "^2.4.6",
     "@capacitor/core": "^2.4.6",
     "@capacitor/ios": "^2.4.6",
+    "cpx": "^1.5.0",
     "debug": "^4.3.1",
     "dom7": "^3.0.0",
     "framework7": "^6.0.17",
