--- a/assets-src/manifest.json
+++ b/assets-src/manifest.json
@@ -1,16 +1,22 @@
 {
-    "name": "Cosmoiler",
+    "manifest_version": 2,
+	"version": 4.5,
+	"name": "Cosmoiler",
     "short_name": "Oiler",
     "description": "Smart automatic motorcycle chain oiler",
     "theme_color": "#ecece0",
     "background_color": "#ecece0",
-    "start_url": "http://192.168.4.1",
     "display": "standalone",
     "orientation": "portrait",
     "icons": [
         {
             "src": "/android192.png",
             "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/android256.png",
+            "sizes": "256x256",
             "type": "image/png"
         },
         {
