--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cosmoiler",
   "private": true,
-  "version": "4.9.1",
+  "version": "5.0.0",
   "description": "Cosmoiler - automatic chain oiler",
   "repository": "",
   "license": "FREE",
@@ -12,8 +12,6 @@
     "dev": "cross-env NODE_ENV=development webpack serve --config ./build/webpack.config.js",
     "buildcpx": "cross-env NODE_ENV=production node ./build/build.js && npm run postinstall",
     "build": "cross-env NODE_ENV=production node ./build/build.js",
-    "build-capacitor-ios": "cross-env NODE_ENV=production node ./build/build.js && npx cap copy ios",
-    "build-capacitor-android": "cross-env NODE_ENV=production node ./build/build.js && npx cap copy android",
     "postinstall": "cpx ./www/*.{json,html,gz,woff,png} ./%USERPROFILE%/Documents/Prog/Firmware/ESP32/workspace/cosmoiler-idf/data/"
   },
   "browserslist": [
@@ -25,53 +23,54 @@
     "Samsung >= 5"
   ],
   "dependencies": {
-    "@capacitor/android": "^2.4.6",
-    "@capacitor/core": "^2.4.6",
-    "@capacitor/ios": "^2.4.6",
+    "@capacitor/android": "^2.5.0",
+    "@capacitor/core": "^2.5.0",
+    "@capacitor/ios": "^2.5.0",
     "cpx": "^1.5.0",
-    "debug": "^4.3.1",
+    "debug": "^4.3.7",
     "dom7": "^3.0.0",
-    "framework7": "^6.0.17",
+    "framework7": "^6.3.17",
     "framework7-icons": "^3.0.1",
-    "framework7-svelte": "^6.0.17",
+    "framework7-svelte": "^6.3.17",
     "reconnecting-websocket": "^4.4.0",
-    "skeleton-elements": "^3.3.0",
-    "svelte": "^3.38.2",
-    "svelte-i18n": "^3.3.0",
-    "swiper": "^6.4.10"
+    "renderkid": "^3.0.0",
+    "skeleton-elements": "^3.5.0",
+    "svelte": "^3.59.2",
+    "svelte-i18n": "^3.7.4",
+    "swiper": "^6.8.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/runtime": "^7.12.5",
-    "@capacitor/cli": "^2.4.6",
-    "babel-loader": "^8.2.2",
-    "chalk": "^4.1.0",
-    "compression-webpack-plugin": "^8.0.0",
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-runtime": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/runtime": "^7.26.0",
+    "@capacitor/cli": "^2.5.0",
+    "babel-loader": "^8.4.1",
+    "chalk": "^4.1.2",
+    "compression-webpack-plugin": "^8.0.1",
     "copy-webpack-plugin": "^7.0.0",
-    "cordova-res": "^0.15.3",
+    "cordova-res": "^0.15.4",
     "cpy-cli": "^3.1.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.0.1",
-    "css-minimizer-webpack-plugin": "^1.2.0",
+    "css-loader": "^5.2.7",
+    "css-minimizer-webpack-plugin": "^1.3.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.1",
-    "less": "^4.1.1",
+    "html-webpack-plugin": "^4.5.2",
+    "less": "^4.2.0",
     "less-loader": "^7.3.0",
-    "mini-css-extract-plugin": "^1.3.5",
-    "ora": "^5.3.0",
-    "postcss-loader": "^4.2.0",
-    "postcss-preset-env": "^6.7.0",
+    "mini-css-extract-plugin": "^1.6.2",
+    "ora": "^5.4.1",
+    "postcss-loader": "^4.3.0",
+    "postcss-preset-env": "^6.7.2",
     "rimraf": "^3.0.2",
     "style-loader": "^2.0.0",
-    "svelte-loader": "^3.0.0",
-    "terser-webpack-plugin": "^5.1.1",
+    "svelte-loader": "^3.2.4",
+    "terser-webpack-plugin": "^5.3.10",
     "url-loader": "^4.1.1",
-    "webpack": "^5.19.0",
-    "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^3.11.2",
+    "webpack": "^5.95.0",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^3.11.3",
     "webpack-pwa-manifest": "^4.3.0"
   }
 }
